export interface Fornecedor {
    id?: number;
    nome: string;
    cnpj: string;
    fone: string;
}

// em java se diz classe
// em typescript eh interface
// em type posso colocar estrutura e métodos
// mas não em uma interface