export interface Produto {
  id?: number;
  nome: string;
  preco: number;
  quantidade: number;
  fornecedorId: number;
  ordem?: number;
}